Deleted unnecessary CSS.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header id="headLine">
 		<h1>Nature Soundboard</h1>
 	</header>
-<div class="example-parent">
+<div class="parentContainer">
   <div class="dropzone">
     <!-- <img src="images/campgroundFull.svg" id="cG" class="plaincG"> -->
     <?xml version="1.0" encoding="UTF-8"?>
