Audio functionality finalized.

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       </g>
     </svg>
   </div>
-  <p>Click on an item to add an audio track!</p>
+  <p>Click on an icon to customize your nature soundtrack!</p>
   <div class="campPieces">
     <div id="birdToggle">
       <img src="images/birds.svg">
@@ -269,6 +269,17 @@
       <img src="images/sun.svg">
     </div>
   </div>
+</div>
+<div class="hidden">
+  <audio src="assets/birdsLoop1.mp3" id="birdAudio" loop>
+  <audio src="assets/ambientLoop1.mp3" id="bushesAudio" loop>
+  <audio src="assets/ambientLoop2.mp3" id="firAudio" loop>
+  <audio src="assets/birdsLoop2.wav" id="grassAudio" loop>
+  <audio src="assets/ambientLoop3.mp3" id="mapleAudio" loop>
+  <audio src="assets/riverLoop.mp3" id="riverAudio" loop>
+  <audio src="assets/ambientLoop4.wav" id="rocksAudio" loop>
+  <audio src="assets/ambientLoop5.wav" id="spruceAudio" loop>
+  <audio src="assets/backgroundTrack.mp3" id="sunAudio" loop>
 </div>
   <script src="js/main.js"></script>
 </body>
